added-address-fieds-to-open-api-documentation
